--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-
 
     <TextView
         android:id="@+id/fstTxt1"
@@ -32,15 +32,14 @@
         android:layout_marginLeft="100dp"
         android:ems="10"/>
 
-
     <TextView
         android:id="@+id/secTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="username"
+        android:text="Designation"
         android:layout_marginLeft="100dp" />
     <EditText
-        android:id="@+id/txtusername"
+        android:id="@+id/txtDesignation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
@@ -50,15 +49,14 @@
         android:id="@+id/thirdTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="password"
+        android:text="Location"
         android:layout_marginLeft="100dp" />
     <EditText
-        android:id="@+id/txtpassword"
+        android:id="@+id/txtLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
         android:ems="10" />
-
 
     <Button
         android:id="@+id/btnSave"
@@ -67,4 +65,3 @@
         android:layout_marginLeft="100dp"
         android:text="Save" />
 </LinearLayout>
-
