--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <ListView
         android:id="@+id/user_list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:dividerHeight="1dp" />
+
     <Button
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
@@ -15,4 +18,5 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:text="Back" />
+
 </LinearLayout>
