--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -1,42 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="5dip" >
-
+    android:padding="5dip">
 
     <TextView
         android:id="@+id/id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="17dp" />
+        android:textSize="17sp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:text="ID"/>
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="17dp" />
+        android:textSize="17sp"
+        android:layout_below="@+id/id"
+        android:layout_alignParentStart="true"
+        android:text="Name"/>
 
     <TextView
-        android:id="@+id/username"
+        android:id="@+id/designation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/password"
-        android:layout_alignBottom="@+id/password"
-        android:layout_alignParentRight="true"
-        android:textColor="#343434"
-        android:textSize="14dp" />
-
-    <TextView
-        android:id="@+id/password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/name"
+        android:textSize="14sp"
+        android:layout_below="@+id/name"
+        android:layout_alignParentStart="true"
         android:layout_marginTop="7dp"
-        android:textColor="#343434"
-        android:textSize="14dp" />
+        android:text="Designation"/>
+
+    <TextView
+        android:id="@+id/location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:layout_below="@+id/designation"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="7dp"
+        android:text="Location"/>
 
 </RelativeLayout>
